deployment/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newsanalyzer-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: newsanalyzer-ip
spec:
  rules:
    - host: app.newsanalyzer.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-server
                port:
                  number: 8888
